--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ annotated-types==0.6.0
 anyio==4.3.0
 asgiref==3.7.2
 attrs==23.2.0
+beautifulsoup4==4.12.3
 billiard==4.2.0
+bs4==0.0.2
 cachetools==5.3.3
 celery==5.3.6
 certifi==2024.2.2
@@ -44,6 +46,7 @@ langchain-core==0.1.29
 langchain-openai==0.0.8
 langchain-text-splitters==0.0.1
 langsmith==0.1.22
+lxml==5.1.0
 marshmallow==3.21.1
 multidict==6.0.5
 mypy-extensions==1.0.0
@@ -51,6 +54,7 @@ numpy==1.26.4
 openai==1.13.3
 orjson==3.9.15
 packaging==23.2
+pandas==2.2.1
 prompt-toolkit==3.0.43
 protobuf==4.25.3
 psycopg2-binary==2.9.9
@@ -70,6 +74,7 @@ requests==2.31.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
 sqlalchemy==2.0.28
 sqlparse==0.4.4
 stripe==8.6.0
