--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.9.3
+aiohttp-retry==2.8.3
 aiosignal==1.3.1
 amqp==5.2.0
 annotated-types==0.6.0
@@ -62,6 +63,7 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydantic==2.6.3
 pydantic-core==2.16.3
+pyjwt==2.8.0
 pyparsing==3.1.2
 python-crontab==3.0.0
 python-dateutil==2.9.0.post0
@@ -82,6 +84,7 @@ tenacity==8.2.3
 tiktoken==0.6.0
 tornado==6.4
 tqdm==4.66.2
+twilio==9.0.2
 typing-extensions==4.10.0
 typing-inspect==0.9.0
 tzdata==2024.1
