--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.prod
-    command: celery -A APIRealtorBuddyCore worker --loglevel=info
+    command: celery -A APIRealtorBuddyCore worker --loglevel=info --queues=buildingService --concurrency=1
     volumes:
       - .:/app
     environment:
