--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ build==1.2.1
 cachetools==5.3.3
 celery==5.3.6
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
 chromadb==0.4.24
@@ -26,10 +27,12 @@ click-repl==0.3.0
 cohere==5.2.2
 coloredlogs==15.0.1
 cron-descriptor==1.4.3
+cryptography==42.0.7
 dataclasses-json==0.6.4
 deprecated==1.2.14
 distro==1.9.0
 django==3.2.24
+django-allauth==0.63.1
 django-celery-beat==2.5.0
 django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
@@ -99,6 +102,7 @@ orjson==3.9.15
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.1
+pip==23.2.1
 posthog==3.5.0
 prompt-toolkit==3.0.43
 protobuf==4.25.3
@@ -106,6 +110,7 @@ psycopg2-binary==2.9.9
 pulsar-client==3.4.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pycparser==2.22
 pydantic==2.6.3
 pydantic-core==2.16.3
 pygments==2.17.2
