--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,11 +11,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.prod
-    command: gunicorn APIRealtorBuddyCore.wsgi:application --bind 0.0.0.0:8000 --workers 4
+    command: >
+      sh -c "python manage.py makemigrations &&
+            python manage.py migrate &&
+            gunicorn APIRealtorBuddyCore.wsgi:application --bind 0.0.0.0:8000 --workers 4"
     volumes:
       - .:/app
     environment:
-      - DEBUG=0  # Make sure debug is turned off in production
+      - DEBUG=0  # Ensure debug is turned off in production
     restart: unless-stopped
     depends_on:
       - redis_realtorbuddycore
