--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,7 +15,8 @@ services:
       sh -c "python manage.py makemigrations &&
             python manage.py migrate &&
             python manage.py collectstatic --noinput &&
-            gunicorn APIRealtorBuddyCore.wsgi:application --bind 0.0.0.0:8000 --workers 4"
+            gunicorn APIRealtorBuddyCore.wsgi:application --workers 4 --bind 0.0.0.0:8000 --log-level debug --access-logfile -"
+            
     volumes:
       - .:/app
     ports:
