--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ backoff==2.2.1
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
 billiard==4.2.0
+boto3==1.34.124
+botocore==1.34.124
 bs4==0.0.2
 build==1.2.1
 cachetools==5.3.3
@@ -29,15 +31,17 @@ coloredlogs==15.0.1
 cron-descriptor==1.4.3
 cryptography==42.0.7
 dataclasses-json==0.6.4
-Deprecated==1.2.14
+deprecated==1.2.14
 distro==1.9.0
-Django==3.2.24
+django==5.0
 django-allauth==0.63.1
 django-celery-beat==2.5.0
 django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
 django-livereload-server==0.5.1
+django-phonenumber-field==7.3.0
 django-timezone-field==6.1.0
+django-twilio==0.14.3.3
 djangorestframework==3.14.0
 djangorestframework-api-key==3.0.0
 fastapi==0.110.1
@@ -62,7 +66,8 @@ huggingface-hub==0.22.2
 humanfriendly==10.0
 idna==3.6
 importlib-metadata==7.0.0
-importlib_resources==6.4.0
+importlib-resources==6.4.0
+jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
 kombu==5.3.5
@@ -103,6 +108,8 @@ orjson==3.9.15
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.1
+phonenumbers==8.13.37
+pip==23.2.1
 posthog==3.5.0
 prompt-toolkit==3.0.43
 protobuf==4.25.3
@@ -112,28 +119,30 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.22
 pydantic==2.6.3
-pydantic_core==2.16.3
-Pygments==2.17.2
-PyJWT==2.8.0
+pydantic-core==2.16.3
+pygments==2.17.2
+pyjwt==2.8.0
 pyparsing==3.1.2
-PyPika==0.48.9
-pyproject_hooks==1.0.0
+pypika==0.48.9
+pyproject-hooks==1.0.0
 python-crontab==3.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
-PyYAML==6.0.1
+pyyaml==6.0.1
 redis==5.0.3
 regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==2.0.0
 rich==13.7.1
 rsa==4.9
+s3transfer==0.10.1
+setuptools==69.2.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
-SQLAlchemy==2.0.28
+sqlalchemy==2.0.28
 sqlparse==0.4.4
 starlette==0.37.2
 stripe==8.6.0
@@ -146,8 +155,8 @@ tqdm==4.66.2
 twilio==9.0.2
 typer==0.12.1
 types-requests==2.31.0.20240406
+typing-extensions==4.10.0
 typing-inspect==0.9.0
-typing_extensions==4.10.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
