--- a/requirements.txt
+++ b/requirements.txt
@@ -159,7 +159,7 @@ typing-extensions==4.10.0
 typing-inspect==0.9.0
 tzdata==2024.1
 uritemplate==4.1.1
-urllib3==2.2.1
+urllib3>=1.25.4,<1.27
 uvicorn==0.29.0
 uvloop==0.19.0
 vine==5.1.0
