--- a/requirements.txt
+++ b/requirements.txt
@@ -31,9 +31,9 @@ coloredlogs==15.0.1
 cron-descriptor==1.4.3
 cryptography==42.0.7
 dataclasses-json==0.6.4
-deprecated==1.2.14
+Deprecated==1.2.14
 distro==1.9.0
-django==4.2.13
+Django==4.2.13
 django-allauth==0.63.1
 django-celery-beat==2.5.0
 django-cors-headers==4.3.1
@@ -54,6 +54,7 @@ google-api-core==2.17.1
 google-api-python-client==2.121.0
 google-auth==2.28.1
 google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
 googleapis-common-protos==1.62.0
 grpcio==1.62.1
 gunicorn==21.2.0
@@ -66,7 +67,7 @@ huggingface-hub==0.22.2
 humanfriendly==10.0
 idna==3.6
 importlib-metadata==7.0.0
-importlib-resources==6.4.0
+importlib_resources==6.4.0
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
@@ -109,7 +110,6 @@ overrides==7.7.0
 packaging==23.2
 pandas==2.2.1
 phonenumbers==8.13.37
-pip==23.2.1
 pip-tools==7.4.1
 posthog==3.5.0
 prompt-toolkit==3.0.43
@@ -120,17 +120,17 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.22
 pydantic==2.6.3
-pydantic-core==2.16.3
-pygments==2.17.2
-pyjwt==2.8.0
+pydantic_core==2.16.3
+Pygments==2.17.2
+PyJWT==2.8.0
 pyparsing==3.1.2
-pypika==0.48.9
-pyproject-hooks==1.0.0
+PyPika==0.48.9
+pyproject_hooks==1.0.0
 python-crontab==3.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
-pyyaml==6.0.1
+PyYAML==6.0.1
 redis==5.0.3
 regex==2023.12.25
 requests==2.31.0
@@ -138,12 +138,11 @@ requests-oauthlib==2.0.0
 rich==13.7.1
 rsa==4.9
 s3transfer==0.10.1
-setuptools==69.2.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
-sqlalchemy==2.0.28
+SQLAlchemy==2.0.28
 sqlparse==0.4.4
 starlette==0.37.2
 stripe==8.6.0
@@ -157,8 +156,8 @@ twilio==9.0.2
 typer==0.12.1
 types-requests==2.31.0.6
 types-urllib3==1.26.25.14
-typing-extensions==4.10.0
 typing-inspect==0.9.0
+typing_extensions==4.10.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==1.26.16
@@ -169,7 +168,6 @@ watchfiles==0.21.0
 wcwidth==0.2.13
 websocket-client==1.7.0
 websockets==12.0
-wheel==0.43.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.18.1
