--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ humanfriendly==10.0
 idna==3.6
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
+Jinja2==3.1.4
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==2.4
@@ -84,6 +85,7 @@ langgraph==0.0.32
 langsmith==0.1.22
 lxml==5.1.0
 markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 marshmallow==3.21.1
 mdurl==0.1.2
 mmh3==4.1.0
